@@ -17,7 +17,7 @@ Projeto baseado na metodologia ágil SCRUM, procurando desenvolver a Proatividad
 * [Tecnologias Utilizadas](#objetivo-do-projeto)
 * [Funcionalidades e registros (vídeos e apresentações) das sprints](#funcionalidades-e-registros-(vídeos-e-apresentações)-das-sprints)
 * [Backlog do produto](#Backlog-do-produto)
-* [Como baixar o site](#Como-rodar-a-IDE)
+* [Como rodar a IDE](#Como-rodar-a-IDE)
 * [Competências desenvolvidas](#competências-desenvolvidas)
 * [Autores](#autores)
 
@@ -112,7 +112,7 @@ Objetivos secundários incluem:
 | Baixa | Como usuário, quero um tutorial para a instalação do projeto. | 2 | 3 |
 
 # Como Rodar a IDE
-
+`-Para rodar e preciso usar o Comando no CMD: java --module-path "Colocar a Localização o seu javafx-sdk-24.0.1\lib " --add-modules javafx.controls,javafx.fxml -jar Localização do seu jar que esta na pasta da IDE Exemplo: D:\API\API_2\Branchie\API2\DeepCode.jar `
 
 
 # Autores
